Set Avatar, Delete Chat, add and remove member added.
02/10/2024
